...
    lazy var searchController: UISearchController = {
        let searchController = UISearchController(searchResultsController: nil)
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.tintColor = .label
        searchController.searchBar.delegate = self
        searchController.searchBar.isAccessibilityElement = true
        searchController.searchBar.accessibilityIdentifier = "search-bar"
        searchController.searchBar.accessibilityTraits = UIAccessibilityTraits.searchField

        return searchController
    }()
    override func viewDidLoad() {
        super.viewDidLoad()
...
        ///
        navigationItem.hidesSearchBarWhenScrolling = false
        tableView.tableFooterView = UIView()
        tableView.registerNib(cellClass: MovieTableViewCell.self)
        self.tableView.delegate = self
        self.tableView.dataSource = self
        self.tableView.accessibilityIdentifier = "tableview"
        viewModel?.output.reloadTable.bind {[weak self] _ in
            DispatchQueue.main.async {
                if (self?.viewModel?.filteredData?.count ?? 0 > 0) {
                    self?.tableView.isHidden = false
                    self?.alertView.isHidden = true
                } else {
...
